--- a/calculator.html
+++ b/calculator.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator- By viral</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="assets/css/calculator.css">
+    <link rel="stylesheet" href="calculator.css">
 </head>
 <body>
     
@@ -25,6 +25,6 @@
         </div>
     </div>
 
-    <script src="assets/js/calculator.js"></script>
+    <script src="calculator.js"></script>
 </body>
 </html>
